@@ -1,3 +1,7 @@
+2022-10-25  Eduardo Ochs  <eduardoochs@gmail.com>
+
+	* eev-tlinks.el (ee-1stclassvideos-dlsubs): rewritten.
+
 2022-10-23  Eduardo Ochs  <eduardoochs@gmail.com>
 
 	* eev-tlinks.el (find-telegachat-links)
